--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - ./build/volumes/data:/data
     env_file:
       - ./.env
-    command: ["python", "./runner.py", "--get_dependents", "--pattern", "password_based_authentication", "--web_framework", "fastapi", "--language", "python", "--package_manager", "Pypi", "--root_data_dir=/data"]
+    command: ["python", "./runner.py", "--get_dependents", "--pattern", "password_based_authentication", "--web_framework", "fastapi", "--language", "python", "--package_manager", "Pypi", "--root_data_dir=/data", "--crawl"]
     deploy:
       resources:
         limits:
